--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,8 @@ ConfigArgParse==0.11.0
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
-distro-info===0.18ubuntu0.18.04.1
-Flask==1.1.1
-Flask-SSLify==0.1.5
-Flask-Static-Compress==1.0.2
-future==0.15.2
-gast==0.3.3
+distro-info===0.18
+ubuntu0.18.04.1
 google-pasta==0.1.8
 grpcio==1.27.1
 gunicorn==19.9.0
