--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "app that lets us study on the right time",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "semantic-ui-react": "^0.88.2"
   },
