--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
     "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {},
